--- a/example/app.less
+++ b/example/app.less
@@ -2,6 +2,17 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 12px;
+}
+
+.tree {
+  overflow: hidden;
+  width: 300px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  height: 100%;
 }
 
 body {
