[WIP] Ability to drag from one list to the other
This replaces mouse events with the HTML5 Drag & Drop API. At the
moment, slightly buggy with if statements but it works.

--- a/example/app.less
+++ b/example/app.less
@@ -9,7 +9,7 @@
 .tree {
   overflow: hidden;
   width: 300px;
-  position: fixed;
+  float: left;
   left: 0;
   top: 0;
   height: 100%;
@@ -22,7 +22,7 @@ body {
 }
 
 .inspector {
-  margin-left: 400px;
+  float: left;
 
   pre {
     font-family: Menlo;
